# civis-python

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  CivisML Example.ipynb  LICENSE.md  MANIFEST.in  README.md  README.rst  appveyor.yml  dev-requirements.txt  full-testing-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload_test.py
.circleci/: config.yml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: general.md
.github/workflows/: release.yml
civis/: __init__.py  _deprecation.py  _utils.py  base.py  civis.py  compat.py  futures.py  loggers.py  parallel.py  polling.py  pubnub.py  response.py  result.py  run_joblib_func.py  service_client.py
civis/cli/: __init__.py  __main__.py  _cli_commands.py
civis/io/: __init__.py  _databases.py  _files.py  _s3.py  _scripts.py  _tables.py
civis/ml/: __init__.py  _helper.py  _model.py
civis/ml/tests/: test_helper.py  test_model.py
civis/resources/: __init__.py  _resources.py  civis_api_spec.json
civis/tests/: __init__.py  civis_api_spec.json  civis_api_spec_channels.json  mocks.py  test_base.py  test_civis.py  test_cli.py  test_client.py  test_compat.py  test_deprecate.py  test_futures.py  test_io.py  test_jobs.py  test_loggers.py  test_parallel.py  test_polling.py  test_pubnub.py  test_resources.py  test_response.py  test_result.py  test_service_client.py  test_utils.py  test_version.py  testcase.py
civis/tests/cassettes/: CivisFutureTests.test_check_message_with_different_run_id.yml  CivisFutureTests.test_explicit_polling_interval_with_channels.yml  CivisFutureTests.test_overwrite_polling_interval_with_channels.yml  CivisFutureTests.test_polling_interval.yml  CivisFutureTests.test_set_api_result_failed.yml  CivisFutureTests.test_set_api_result_result_succeeded.yml  CivisFutureTests.test_subscribed_with_channels.yml  CivisFutureTests.test_subscribed_with_no_channels.yml  CivisFutureTests.test_subscribed_with_no_subscription.yml  ClientTests.test_feature_flags.yml  ClientTests.test_feature_flags_memoized.yml  ImportTests.test_bytes_file_to_civis.yml  ImportTests.test_civis_file_to_table.yml  ImportTests.test_civis_multifile_unload.yml  ImportTests.test_civis_to_file.yml  ImportTests.test_civis_to_gzip_csv_no_headers.yml  ImportTests.test_civis_to_gzip_csv_with_headers.yml  ImportTests.test_civis_to_multifile_csv.yml  ImportTests.test_civisfile_to_civis.yml  ImportTests.test_csv_to_civis.yml  ImportTests.test_dataframe_to_civis.yml  ImportTests.test_dataframe_to_civis_with_index.yml  ImportTests.test_download_file.yml  ImportTests.test_export_to_civis_file.yml  ImportTests.test_file_to_civis.yml  ImportTests.test_get_s3_url_from_id.yml  ImportTests.test_get_url_from_file_id.yml  ImportTests.test_large_file_to_civis.yml  ImportTests.test_query_to_civis_file.yml  ImportTests.test_read_civis_no_pandas.yml  ImportTests.test_read_civis_pandas.yml  ImportTests.test_read_civis_sql.yml  ImportTests.test_s3_url_from_id.yml  ImportTests.test_text_file_to_civis.yml  ImportTests.test_transfer_table.yml  ImportTests.test_zip_member_to_civis.yml  PubnubTests.test_check_message.yml  PubnubTests.test_check_message_when_job_is_running.yml  PubnubTests.test_set_api_result_explicit_result.yml  PubnubTests.test_set_api_result_poller.yml  (+2 more)
civis/utils/: __init__.py  _deprecation.py  _jobs.py  deprecation.py
docs/: Makefile  client.rst  conf.py  index.rst  io.rst  ml.rst  parallel.rst  requirements.txt  responses.rst  user_guide.rst  utils.rst
docs/_static/: custom.css
docs/source/: cli.rst  client.rst  conf.py  index.rst  io.rst  jobs.rst  ml.rst  parallel.rst  responses.rst  user_guide.rst  utils.rst
docs/source/_static/: custom.css
examples/: CivisML Example.ipynb  CivisML.ipynb  CivisML_parallel_training.ipynb  Introducing_CivisML_2.0.ipynb  Introducing_CivisML_v2.ipynb  PythonAPIClientDemo.ipynb  parallel_cancel.py  wbcd_environment.yml
examples/.ipynb_checkpoints/: CivisML-checkpoint.ipynb  CivisML_parallel_training-checkpoint.ipynb  Introducing_CivisML_v2-checkpoint.ipynb
src/civis/: __init__.py  _camel_to_snake.py  _deprecation.py  _get_api_key.py  _retries.py  _utils.py  base.py  client.py  client.pyi  futures.py  loggers.py  parallel.py  polling.py  response.py  run_joblib_func.py  service_client.py
src/civis/cli/: __main__.py  _cli_commands.py
src/civis/io/: __init__.py  _databases.py  _files.py  _tables.py  _utils.py
src/civis/ml/: __init__.py  _helper.py  _model.py
src/civis/resources/: __init__.py  _api_spec.py  _client_pyi.py  _client_pypi.py  _resources.py  civis_api_spec.json
src/civis/tests/: __init__.py  mocks.py
src/civis/utils/: __init__.py  _jobs.py
src/civis/workflows/: __init__.py  _schema.py  _schemas.py  _validate.py
tests/: test_base.py  test_camel_to_snake.py  test_cli.py  test_client.py  test_deprecate.py  test_futures.py  test_io.py  test_jobs.py  test_loggers.py  test_mocks.py  test_parallel.py  test_polling.py  test_resources.py  test_response.py  test_retries.py  test_run_joblib_func.py  test_service_client.py  test_utils.py  test_version.py
tests/test_ml/: test_helper.py  test_model.py
tests/test_workflows/: test_validate.py
tools/: check_if_civis_api_spec_has_updated.py  local_smoke_tests.py  smoke_tests.py  update_civis_api_spec.py  update_civis_api_spec_json.py  update_client_pyi.py
