[build-system]
requires = ["setuptools >= 69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civis"
version = "2.8.0"
description = "Civis API Python Client"
readme = "README.rst"
requires-python = ">= 3.11"
authors = [ { name = "Civis Analytics", email = "opensource@civisanalytics.com" } ]
license = { text = "BSD-3-Clause" }
dependencies = [
    "click >= 6.0",
    "cloudpickle >= 0.2",
    "joblib >= 1.5.0",
    "jsonref >= 0.1",
    "jsonschema >= 2.5.1",
    "PyYAML >= 3.0",
    "requests >= 2.32.3",
    "tenacity >= 6.2",
    # For backporting warnings.deprecated in Python >= 3.13
    "typing-extensions >= 4.5.0 ; python_version < '3.13'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://www.civisanalytics.com"
Source = "https://github.com/civisanalytics/civis-python"

[project.scripts]
civis = "civis.cli.__main__:main"
civis_joblib_worker = "civis.run_joblib_func:main"

[project.optional-dependencies]
dev-core = [
    "bandit",  # Install the latest version.
    "black == 25.12.0",
    "build == 1.3.0",
    "flake8 == 7.3.0",
    "mypy == 1.19.1",
    "pandas == 2.3.3",
    "pip-audit",  # Install the latest version.
    "polars == 1.36.1",
    "pytest == 9.0.2",
    "pytest-cov == 7.0.0",
    "twine == 6.2.0",
    # The stub packages are used by mypy, so just get their latest versions.
    "pandas-stubs",
    "types-jsonschema",
    "types-PyYAML",
    "types-requests",
]
dev-civisml = [
    "feather-format == 0.4.1",
    "numpy == 2.4.0",
    "scikit-learn == 1.8.0",
    "scipy == 1.16.3",
]
docs = [
    # docs/requirements.txt pins all transitive dependencies for a reproducible doc build.
    "numpydoc == 1.8.0",
    "Sphinx == 8.2.3",
    "sphinx-rtd-theme == 3.0.2",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
civis = ["resources/*.json", "py.typed", "**/*.pyi"]

[tool.pytest.ini_options]
addopts = "--strict-markers -vv --cov=src/civis"
testpaths = ["tests"]

[tool.mypy]
exclude = [
    'civis/resources/_',
    'civis/service_client.py',
    'civis/ml/*',
    'civis/run_joblib_func.py',
    'civis/cli/*',
    'civis/parallel.py'
]
