[build-system]
requires = ["setuptools >= 69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civis"
version = "2.9.0"
description = "Civis API Python Client"
readme = "README.rst"
requires-python = ">= 3.11"
authors = [ { name = "Civis Analytics", email = "opensource@civisanalytics.com" } ]
license = "BSD-3-Clause"
dependencies = [
    # This is a public package that can be used in environments we don't control.
    # Therefore we don't set version upper bounds (i.e., don't use <= or <)
    # to avoid dependency version conflicts. If a particular dependency version
    # is known to be incompatible with civis-python, enumerate the version with !=.
    "click >= 6.0",
    "cloudpickle >= 0.2",
    "joblib >= 1.5.0",
    "jsonref >= 0.1",
    "jsonschema >= 2.5.1",
    "PyYAML >= 3.0",
    "requests >= 2.32.3",
    "tenacity >= 6.2",
    # For backporting warnings.deprecated in Python >= 3.13
    "typing-extensions >= 4.5.0 ; python_version < '3.13'",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://www.civisanalytics.com"
Source = "https://github.com/civisanalytics/civis-python"

[project.scripts]
civis = "civis.cli.__main__:main"
civis_joblib_worker = "civis.run_joblib_func:main"

[project.optional-dependencies]
# Not pinning versions for dev dependencies, so that we always install their
# latest versions on CI builds for forward compatibility.
dev-core = [
    "bandit",
    "black",
    "build",
    "flake8",
    "mypy",
    "pandas",
    "pip-audit",
    "polars",
    "pytest",
    "pytest-cov",
    "twine",
    # The stub packages are used by mypy.
    "pandas-stubs",
    "types-jsonschema",
    "types-PyYAML",
    "types-requests",
]
dev-civisml = [
    "feather-format",
    "numpy",
    "scikit-learn",
    "scipy",
]
docs = [
    # docs/requirements.txt pins all transitive dependencies for a reproducible doc build.
    "numpydoc",
    # Sphinx v9 would break custom code in docs/conf.py.
    "Sphinx < 9",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
civis = ["resources/*.json", "py.typed", "**/*.pyi"]

[tool.pytest.ini_options]
addopts = "--strict-markers -vv --cov=src/civis"
testpaths = ["tests"]

[tool.mypy]
exclude = [
    'civis/resources/_',
    'civis/service_client.py',
    'civis/ml/*',
    'civis/run_joblib_func.py',
    'civis/cli/*',
    'civis/parallel.py'
]
